--- a/style.css
+++ b/style.css
@@ -125,11 +125,12 @@ h1{
   overflow: auto;
   text-align: center;
 }
-.editingbox
+#editingbox
 {
   height: 800px;
   width: 1024px;
   background-color: lightcyan;
+  
 }
 #textarea1
 {
@@ -179,3 +180,11 @@ text-align: center;
   font-weight: 800;
 
 }
+
+div.editable {
+  width: 300px;
+  height: 200px;
+  border: 1px solid #ccc;
+  padding: 5px;
+}
+
