--- a/pages/style.css
+++ b/pages/style.css
@@ -125,11 +125,12 @@ h1{
   overflow: auto;
   text-align: center;
 }
-.editingbox
+#editingbox
 {
   height: 800px;
   width: 1024px;
   background-color: lightcyan;
+  
 }
 #textarea1
 {
@@ -157,4 +158,40 @@ fieldset{
   padding-right: 20px;
   padding-bottom: 30px;
   padding-left: 20px;
+}
+
+#originalusername {
+
+text-align: center;
+
+}
+
+#originalpassword {
+
+  text-align: center;
+  
+  }
+
+#changepasswordbutton{
+
+  padding: 10px;
+  background-color: white;
+  color: black;
+  font-weight: 800;
+
+}
+
+div.editable {
+  width: 300px;
+  height: 200px;
+  border: 1px solid #ccc;
+  padding: 5px;
+}
+
+#page-selectlabel {
+
+
+color: white;
+
+
 }
